# apollo-ios-dev

./: .bazelrc  BUILD.bazel  MODULE.bazel  RUST_CODEGEN_REPORT.md
Sources/AnimalKingdomAPI/: BUILD.bazel
Sources/AnimalKingdomAPI/animalkingdom-graphql/: .gitignore  AllAnimalsIncludeSkipQuery.graphql.swift  AllAnimalsLocalCacheMutation.graphql.swift  AllAnimalsQuery.graphql.swift  ClassroomPetDetails.graphql.swift  ClassroomPetsQuery.graphql.swift  CrocodileFragment.graphql.swift  DogFragment.graphql.swift  DogQuery.graphql.swift  HeightInMeters.graphql.swift  PetAdoptionMutation.graphql.swift  PetDetails.graphql.swift  PetDetailsMutation.graphql.swift  PetSearchLocalCacheMutation.graphql.swift  PetSearchQuery.graphql.swift  WarmBloodedDetails.graphql.swift
Sources/GitHubAPI/: BUILD.bazel
Sources/StarWarsAPI/: BUILD.bazel
Sources/SubscriptionAPI/: BUILD.bazel
Sources/UploadAPI/: BUILD.bazel
apollo-codegen-rs/: AGENTS.md  Cargo.toml  askama.toml
apollo-codegen-rs/benches/huge_schema/: operations.graphql  schema.graphqls
apollo-codegen-rs/crates/cache/: Cargo.toml
apollo-codegen-rs/crates/cache/src/: lib.rs
apollo-codegen-rs/crates/cli/: Cargo.toml
apollo-codegen-rs/crates/cli/src/: fetch_schema.rs  init_command.rs  lib.rs  main.rs  pipeline.rs
apollo-codegen-rs/crates/cli/tests/: test_pipeline.rs
apollo-codegen-rs/crates/config/: Cargo.toml
apollo-codegen-rs/crates/config/src/: lib.rs  types.rs  validation.rs
apollo-codegen-rs/crates/config/tests/: parse_configs.rs
apollo-codegen-rs/crates/frontend/: Cargo.toml
apollo-codegen-rs/crates/frontend/src/: compilation_result.rs  compiler.rs  introspection.rs  lib.rs  schema.rs  types.rs
apollo-codegen-rs/crates/frontend/tests/: test_schema_loading.rs
apollo-codegen-rs/crates/fuzz-test/: Cargo.toml
apollo-codegen-rs/crates/fuzz-test/src/: main.rs
apollo-codegen-rs/crates/glob/: Cargo.toml
apollo-codegen-rs/crates/glob/src/: lib.rs
apollo-codegen-rs/crates/glob/tests/: real_configs.rs
apollo-codegen-rs/crates/golden-test/: Cargo.toml  manifest.txt
apollo-codegen-rs/crates/golden-test/src/: lib.rs
apollo-codegen-rs/crates/golden-test/tests/: harness.rs
apollo-codegen-rs/crates/ir/: Cargo.toml
apollo-codegen-rs/crates/ir/src/: builder.rs  computed.rs  entity.rs  entity_selection_tree.rs  entity_storage.rs  field_collector.rs  fields.rs  inclusion.rs  lib.rs  merged_selections.rs  named_fragment.rs  operation.rs  schema.rs  scope.rs  selection_set.rs
apollo-codegen-rs/crates/pipeline/: Cargo.toml
apollo-codegen-rs/crates/pipeline/src/: lib.rs
apollo-codegen-rs/crates/render/: Cargo.toml
apollo-codegen-rs/crates/render/src/: ir_adapter.rs  lib.rs  naming.rs  schema_customization.rs  template_string.rs
apollo-codegen-rs/crates/render/src/templates/: custom_scalar.rs  enum_type.rs  fragment.rs  header.rs  input_object.rs  interface.rs  mock_interfaces.rs  mock_object.rs  mock_unions.rs  mod.rs  object.rs  operation.rs  package_swift.rs  schema_config.rs  schema_metadata.rs  selection_set.rs  union_type.rs
apollo-codegen-rs/crates/render/templates/: custom_scalar.swift.askama  enum_type.swift.askama  input_object.swift.askama  interface.swift.askama  mock_interfaces.swift.askama  mock_object.swift.askama  mock_unions.swift.askama  object.swift.askama  package_swift.swift.askama  schema_config.swift.askama  schema_metadata.swift.askama  union_type.swift.askama
apollo-codegen-rs/crates/render/tests/: test_operation_fragment_templates.rs  test_schema_templates.rs
apollo-codegen-rs/crates/worker/: Cargo.toml
apollo-codegen-rs/crates/worker/src/: cache.rs  handler.rs  lib.rs  protocol.rs
apollo-codegen-rs/crates/worker/tests/: bench_worker.rs  integration.rs
bazel/: BUILD.bazel  apollo_codegen.bzl
scripts/: bench-codegen.sh  test-codegen-apis.sh  test-codegen-complex-schemas.sh  test-codegen-configs.sh  test-codegen-fuzz.sh  test-codegen-permutations.sh  test-codegen-regression.sh  test-rust-codegen.sh
scripts/lib/: codegen-test-utils.sh  generate-api-configs.py  generate-complex-fuzz.py  generate-huge-schema.py  generate-permutation-configs.py  rewrite-config-paths.py
