[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/glob",
    "crates/frontend",
    "crates/ir",
    "crates/render",
    "crates/cache",
    "crates/cli",
    "crates/golden-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GraphQL
apollo-compiler = "1"
apollo-parser = "0.8"

# File system
walkdir = "2"
glob = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing / caching
sha2 = "0.10"
zstd = "0.13"
tar = "0.4"

# Parallelism
rayon = "1"

# Diffing (for golden tests)
similar = "2"

# Utilities
indexmap = { version = "2", features = ["serde"] }
regex = "1"
thiserror = "2"
anyhow = "1"

# Internal crates
apollo-codegen-config = { path = "crates/config" }
apollo-codegen-glob = { path = "crates/glob" }
apollo-codegen-frontend = { path = "crates/frontend" }
apollo-codegen-ir = { path = "crates/ir" }
apollo-codegen-render = { path = "crates/render" }
apollo-codegen-cache = { path = "crates/cache" }
