[package]
name = "apollo-codegen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Apollo iOS code generation (Rust implementation)"

[[bin]]
name = "apollo-ios-cli-rs"
path = "src/main.rs"

[dependencies]
apollo-codegen-config.workspace = true
apollo-codegen-glob.workspace = true
apollo-codegen-frontend.workspace = true
apollo-codegen-ir.workspace = true
apollo-codegen-render.workspace = true
apollo-codegen-cache.workspace = true
clap.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
indexmap.workspace = true
sha2.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
