[package]
name = "apollo-codegen-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing for Apollo iOS code generation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
anyhow.workspace = true
