[package]
name = "apollo-codegen-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GraphQL parsing, validation, and compilation for Apollo iOS code generation"

[dependencies]
apollo-compiler.workspace = true
apollo-parser.workspace = true
apollo-codegen-config.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
