[package]
name = "apollo-codegen-glob"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File discovery via glob patterns for Apollo iOS code generation"

[dependencies]
walkdir.workspace = true
glob.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
