[package]
name = "apollo-codegen-golden-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Golden file comparison test harness for Apollo iOS Rust codegen"

[dependencies]
similar.workspace = true
walkdir.workspace = true

[dev-dependencies]
similar.workspace = true
walkdir.workspace = true
