[package]
name = "apollo-codegen-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Swift code rendering templates for Apollo iOS code generation"

[dependencies]
apollo-codegen-ir.workspace = true
apollo-codegen-frontend.workspace = true
apollo-codegen-config.workspace = true
indexmap.workspace = true
regex.workspace = true
thiserror.workspace = true
